2015-10-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/index.rst: Updated for 1.3.22 release.

	* NEWS.txt: Updated for 1.3.22 release.

2015-09-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Brought up to date with changes thus far since last
	release.

	* magick/blob.c (OpenBlob): Disable fflush() of read-only handle
	under Microsoft Windows, which produced a spurious error status,
	blocking file reads for Visual Studio 2015 on Windows 2012 server.
	Problem was reported and diagnosed by Dirk Lemstra.

2015-09-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tiff: Update bundled libtiff sources to 4.0.6 release.

	* magick/module.c (InitializeModuleSearchPath): Fix compilation
	problem when UseInstalledMagick is not defined.

2015-09-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c: Static string/array allocations are now more
	const.

	* coders/{ps.c, ps2.c, ps3.c}: Static string/array allocations are
	now more const.

	* coders/palm.c: Palm static arrays should be 'const'.

	* coders/meta.c (jpeg_embed): Stop sharing writeable static string
	'psheader'.
	(tag_spec): The 'tags' static array should be all 'const'.

	* coders/jp2.c: Try to reduce the amount of non-const static data.

	* coders/dcm.c (dicom_info): Try to make dicom_info array more
	'const'.

	* coders/dpx.c: Eliminate use of static buffer strings.

	* coders/png.c: Make MNG chunk id strings constant rather than
	initialized data.

	* magick/render.c (DrawAffineImage): Fix problem that sometimes
	output rows are skipped when using OpenMP.  Problem identification
	and patch by Kevin Matzen.  Resolves SourceForge issue #316
	"-affine sometimes produces output with missing rows".

2015-08-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwblob.tap: Add specific tests for BMP2 BMP3 subformats.

	* tests/rwfile.tap: Add specific tests for BMP2 BMP3 PS2 PS3
	subformats.

2015-08-30  Jaroslav Fojtik  <JaFojtik@seznam.cz>
