@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020151004"
-#define public MagickPackageReleaseDate "snapshot-20151004"
+#define public MagickPackageVersionAddendum ".020151005"
+#define public MagickPackageReleaseDate "snapshot-20151005"
