@@ -3439,50 +3439,6 @@ fi
 AC_SUBST(MAGICK_DEP_LIBS)
 
 #
-# Deduplicate LDFLAGS
-#
-LDFLAGS_NEW=''
-for flag in $LDFLAGS
-do
-    add=yes
-    for test_flag in $LDFLAGS_NEW
-    do
-        if test $flag = $test_flag
-        then
-            add=no
-            break
-        fi
-    done
-    if test $add = yes
-    then
-        LDFLAGS_NEW="$LDFLAGS_NEW $flag"
-    fi
-done
-LDFLAGS=$LDFLAGS_NEW
-
-#
-# Deduplicate CFLAGS
-#
-CFLAGS_NEW=''
-for flag in $CFLAGS
-do
-    add=yes
-    for test_flag in $CFLAGS_NEW
-    do
-        if test $flag = $test_flag
-        then
-            add=no
-            break
-        fi
-    done
-    if test $add = yes
-    then
-        CFLAGS_NEW="$CFLAGS_NEW $flag"
-    fi
-done
-CFLAGS=$CFLAGS_NEW
-
-#
 # Remove extraneous spaces from output variables (asthetic)
 #
 X_CFLAGS=`echo $X_CFLAGS | sed -e 's/  */ /g'`
