@@ -1,3 +1,8 @@
+2015-10-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* configure.ac: Remove CFLAGS and LDFLAGS deduplication code.
+	Resolves SourceForge bug #320 OS X "universal build failure".
+
 2015-10-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* www/index.rst: Updated for 1.3.22 release.
